--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.0",
+    "cloudinary": "^2.7.0",
     "firebase": "^12.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
