--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@react-pdf/renderer": "^4.3.0",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
     "firebase": "^12.0.0",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
     "react": "19.1.0",
@@ -22,11 +24,18 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/file-saver": "^2.0.7",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "babel-jest": "^30.0.4",
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.0.4",
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
